# flowers-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: keras_flowers.py  main.py
app/model/: .gitignore  keras_flower_labels.txt  keras_flower_labels_fix.txt
frontend/: index.html  main.js  package-lock.json  package.json  style.css
